# boltchat-server

./: CMakeLists.txt  README.md
assets/: example_config.ini
include/: Channel.h  ChannelManager.h  Client.h  ClientManager.h  ConfigReader.h  MessageManager.h  Server.h  ThreadPool.h
src/: Channel.cpp  ChannelManager.cpp  Client.cpp  ClientManager.cpp  ConfigReader.cpp  MessageManager.cpp  Server.cpp  ThreadPool.cpp  main.cpp
